# Threadpool

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  ThreadPool.sln
.github/workflows/: threadpool.yml
ThreadPool/: ThreadPool.vcxproj  ThreadPool.vcxproj.filters  Threadpool.hpp  main.cpp
benchmarks/: CMakeLists.txt  asio_bench.hpp  empty_task.hpp  heavy_task.hpp  main.cpp  sleepy_task.hpp
cmake/: CPPCheck.cmake  ClangFormat.cmake  ClangTidy.cmake  CompilerWarnings.cmake  ConfigureTarget.cmake  FetchASIO.cmake  FetchDoctest.cmake  FetchFunction2.cmake  FetchGoogleBenchmark.cmake  SanitizeAddress.cmake  SanitizeLeaks.cmake  SanitizeThreads.cmake  SanitizeUndefinedBehaviour.cmake
examples/: CMakeLists.txt  testapp.cpp
include/thread_pool/: Threadpool.hpp
include/threadpool/: threadpool.hpp
include/threadpool/tracers/: tracing_console_logger.hpp  tracing_logger.hpp  tracing_nothing.hpp
scripts/: filter-compile-commands.py
tests/: CMakeLists.txt  main.cpp  threadpool.cpp
